--- a/mon-portfolio/src/components/ProjectItem/projectItem.css
+++ b/mon-portfolio/src/components/ProjectItem/projectItem.css
@@ -1,7 +1,7 @@
 .project{
     width: 100%;
     background: white;
-    border-radius: 15px 15px 0 0;
+    border-radius: 20px;
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
 
 }
