--- a/src/components/Error/error.css
+++ b/src/components/Error/error.css
@@ -26,7 +26,7 @@
   
 .error-span {
   color: #053269;
-    font-family: Montserrat, sans-serif;
+    font-family: Vujahday Script;
     font-size: 96px;
     font-weight: 700;
     text-align: center;
@@ -39,7 +39,7 @@
 }
   
 .oups h2 {
-    font-family: Montserrat, sans-serif;
+    font-family: Vujahday Script;
     font-size: 18px;
     font-weight: 500;
     line-height: 26px;
