--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,10 +1,8 @@
 footer {
     background: #78a5dc;
     width: 100%;
-    height: 190px;
+    height: 150px;
     display: flex;
-    flex-direction: column;
-    gap: 10px;
     align-items: center;
     justify-content: center;
   }
@@ -12,24 +10,23 @@ footer {
     height: 30px;
   }
   footer .footer-content {
-    width: 134px;
-    height: 46px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     gap: 5px;
-    text-align: center;
+    align-items: center;
   }
-  @media (min-width: 1024px) {
+  @media (min-width: 699px) {
     footer .footer-content {
-      width: 513px;
-      position: relative;
-      top: 20px;
+      flex-direction: row;
     }
   }
-  footer span {
+  .footer-link {
+    text-decoration: none;
+    cursor: pointer;
     color: white;
-    font-family: Montserrat, sans-serif;
-    font-size: 12px;
+    font-family: Roboto, sans-serif;
+    font-size: 17px;
     padding-inline: 10px;
   }
   @media (min-width: 1024px) {
