--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -15,12 +15,20 @@ header{
 }
 @media (min-width: 1024px) {
     header {
-        padding: 40px 100px;
+        padding: 30px 100px;
     }
 }
 
 .logo{
-    height: 50px;
+    /* height: 50px; */ 
+    font-family: Rubik Lines;
+    color: #053269;
+    font-size: 30px;
+}
+@media (min-width: 768px) {
+    .logo {
+        font-size: 60px;
+    }
 }
 
 nav{
@@ -32,22 +40,23 @@ header nav a {
     all: unset;
     color: #053269;
     cursor: pointer;
-    font-family: Montserrat, sans-serif;
-    font-size: 12px;
-    font-weight: 500;
+    font-family: Vujahday Script;
+    font-size: 15px;
+    font-weight: bold;
     line-height: 17px;
     text-transform: uppercase;
 }
 @media (min-width: 768px) {
     header nav a {
-      font-size: 18px;
+      font-size: 24px;
       line-height: 26px;
+      font-weight: 500;
       text-transform: capitalize;
     }
 }
 @media (min-width: 1024px) {
     header nav a {
-    font-size: 24px;
+    font-size: 28px;
     line-height: 34px;
     text-transform: capitalize;
     }
