--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -6,7 +6,7 @@ main{
     background-color: #E9F1FA;
     align-items: center;
 }
-@media (min-width: 768px) {
+@media (min-width: 600px) {
     main {
         padding-inline: 50px;
     }
@@ -22,6 +22,7 @@ main{
     gap: 25px;
     max-width: 1440px;
     justify-content: center;
+    width: inherit;
 }
 @media (min-width: 768px) {
     .projects-list {
@@ -30,15 +31,15 @@ main{
     }
 }  
 
-.title{
+.projects-title{
     color: #053269;
-    font-family: Montserrat, sans-serif;
+    font-family: Vujahday Script;
     font-size: 24px;
     font-weight: 500;
 }
 @media (min-width: 768px) {
-    .title {
-        font-size: 30px;
+    .projects-title {
+        font-size: 50px;
     }
 } 
 .project-link{
