--- a/src/components/Project/ProjectItem/projectItem.css
+++ b/src/components/Project/ProjectItem/projectItem.css
@@ -3,7 +3,12 @@
     background: white;
     border-radius: 20px;
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-
+    opacity: 1;
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+.project:hover{
+    opacity: 0.6;
 }
 .project-image{
     width: 100%;
