--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -169,10 +169,19 @@
 .header{
   /* transform: translate(-50%, -50%); */
   font-family: Vujahday Script;
-  font-size: 50px;
+  font-size: 30px;
   font-weight: 500;
   color: white;
-  font-size: 3em;
+}
+@media (min-width: 768px) {
+  .header{
+    font-size: 40px;
+  }
+}
+@media (min-width: 1024px) {
+  .header {
+    font-size: 50px;
+  }
 }
 
 #head1, #head2,#head3, #head4, #head5{
