La correction du collapse, du carousel

--- a/src/components/Carousel/carousel.css
+++ b/src/components/Carousel/carousel.css
@@ -1,13 +1,14 @@
 section {
   position: relative;
   display: flex;
-  width: 100%;
+  flex-direction: column;
   align-items: center;
-  background: rgba(246, 246, 246, 0.4509803922);
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-  padding-block: 20px;
   border-radius: 25px;
   justify-content: center;
+  width: 100%;
+  /* background: rgba(246, 246, 246, 0.4509803922); */
+  background: #76ABDF;
 }
 @media (min-width: 768px) {
   section {
@@ -17,15 +18,14 @@ section {
 @media (min-width: 1024px) {
   section {
     width: 650px;
-    padding-block: 40px;
     justify-content: center;
   }
 }
 section img {
-  width: 80%;
+  width: 100%;
   height: 230px;
   object-fit: cover;
-  border-radius: 10px;
+  border-radius: 25px 25px 0px 0px;
   align-self: center;
 }
 @media (min-width: 699px) {
@@ -35,58 +35,16 @@ section img {
 }
 @media (min-width: 1024px) {
   section img {
-    width: 85%;
-    height: 290px; 
-    border-radius: 25px;
+    height: 290px;   
   }
 }
-section p {
-  display: none;
+.slider-arrows{
+ display: flex;
+ height: 40px;
+ align-items: center;
+ color: #053269;
+ gap: 15px;
 }
-@media (min-width: 1024px) {
-  section p {
-    display: flex;
-    position: absolute;
-    bottom: 10px;
-    font-family: Montserrat, sans-serif;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 26px;
-    text-align: center;
-    color: #053269;
-  }
-}
-section .fa-solid {
-  position: absolute;
-  font-size: 24px;
-  color: #053269;
-  padding-inline: 10px;
+.fa-solid {
   cursor: pointer;
-}
-@media (min-width: 1024px) {
-  section .fa-solid {
-    font-size: 35px;
-  }
-}
-
-.fa-chevron-left {
-  position: absolute;
-  left: 0px;
-  font-size: 24px;
-}
-@media (min-width: 768px) {
-  .fa-chevron-left {
-    left: 10px;
-  }
-}
-
-.fa-chevron-right {
-  position: absolute;
-  right: 0px; 
-  font-size: 24px;
-}
-@media (min-width: 768px) {
-  .fa-chevron-right {
-    right: 10px;
-  }
 }
