--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,5 +1,6 @@
 footer {
-    background: #78a5dc;
+    /* background: #78a5dc; */
+    /* background: #76ABDF; */
     width: 100%;
     height: 150px;
     display: flex;
@@ -24,7 +25,7 @@ footer {
   .footer-link {
     text-decoration: none;
     cursor: pointer;
-    color: white;
+    color: #053269;
     font-family: Roboto, sans-serif;
     font-size: 17px;
     padding-inline: 10px;
