--- a/src/components/Project/ProjectPage/projectPage.css
+++ b/src/components/Project/ProjectPage/projectPage.css
@@ -5,16 +5,6 @@
     width: 100%;
     align-items: center;
 }
-/* @media (min-width: 699px) {
-    .full-project {
-        width: 80%;
-    }
-} 
-@media (min-width: 1024px) {
-    .full-project {
-        width: 67%;
-    } 
-}    */
 
 .full-project-title{
     color: #053269;
@@ -78,7 +68,6 @@
     } 
 }   
 
-
 .github-logo-link {
     display: flex;
     flex-direction: column;
@@ -86,7 +75,14 @@
     gap: 15px;
     padding-inline: 15px;
 }
-
+.github-logo{
+    height: 30px;
+}
+@media (min-width: 699px) {
+    .github-logo{
+        height: 40px;
+    }
+}
 .github-link{
     color: #053269;
     font-family: Roboto,sans-serif;
