La structuration des images, la correction de la page about, lajout des composants contact et skills

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -169,7 +169,8 @@
   font-family: Vujahday Script;
   font-size: 30px;
   font-weight: 500;
-  color: white;
+  /* color: white; */
+  color: #053269;
 }
 @media (min-width: 768px) {
   .header{
