--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -6,7 +6,9 @@ main{
     flex-direction: column;
     gap: 20px;
     padding-inline: 20px;
-    background-image: linear-gradient(to top, #accbee 0%, #e7f0fd 100%);
+    /* background-image: linear-gradient(to top, #accbee 0%, #e7f0fd 100%); */
+    background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+    /* background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%); */
     /* background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%); */
 }
 @media (min-width: 768px) {
@@ -21,11 +23,13 @@ main{
 }
 
 .about{
+    max-width: 1440px;
     display: flex;
     flex-direction: column;
+    gap: 25px;
     align-items: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-block: 40px;
+    justify-content: center;
 }
 @media (min-width: 768px) {
     .about {
@@ -40,12 +44,14 @@ main{
 
 .about-content{
     display: flex;
+    width: 100%;
     flex-direction: column;
     gap: 50px;
     align-items: center;
 } 
 @media (min-width: 768px) {
     .about-content {
+        justify-content: center;
         flex-direction: row;
         gap: 50px;
     }
@@ -61,12 +67,10 @@ main{
     font-family: Vujahday Script;
     font-size: 24px;
     font-weight: 500;
-    padding-bottom: 30px;
 }
 @media (min-width: 768px) {
-    .about-title {
-        font-size: 50px;
-        padding-bottom: 50px;
+    .about-title{
+        font-size: 40px;
     }
 }
 
@@ -78,19 +82,27 @@ main{
 }
 @media (min-width: 1024px) {
     .about-image {
-        height: 400px;
-        width: 400px;
+        height: 300px;
+        width: 300px;
         border-radius: 213px;
     }
 }
 .about-text{
-display: flex;
-
-flex-direction: column;
-gap: 25px;
-justify-content: center;
+    display: flex;
+    width: 80%;
+    flex-direction: column;
+    gap: 25px;
+    justify-content: center;
+    text-align: justify;
 }
-
+@media (min-width: 768px) {
+    .about-text {
+        width: 60%;
+    }}
+@media (min-width: 768px) {
+    .about-text {
+        width: 50%;
+        }}
 p {
     font-family: Handlee, sans-serif;
     font-size: 14px;
@@ -105,4 +117,10 @@ p {
     p {
         font-size: 20px;
     }
+}
+.courses-link{
+    color: #053269;
+    font-weight: bold;
+    text-decoration: none;
+    padding-left: 5px;
 }
