--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -190,7 +190,7 @@
   /* -webkit-animation: fadeOut 1 5s ease-in;
   -moz-animation: fadeOut 1 5s ease-in;
   -o-animation: fadeOut 1 5s ease-in; */
-  animation:  finalFade 1 5s ease-in; 
+  animation:  fadeIn 1 1s ease-in; 
   animation-fill-mode: forwards;
 }
 
@@ -199,11 +199,11 @@
   /* -webkit-animation: fadeOut 1 5s ease-in;
   -moz-animation: fadeOut 1 5s ease-in;
   -o-animation: fadeOut 1 5s ease-in; */
-  animation: finalFade 1 5s ease-in;
+  animation: fadeIn 1 2s ease-in;
   /* -webkit-animation-delay: 6s;
   -moz-animation-delay: 6s;
   -o-animation-delay: 6s; */
-  animation-delay: 3s;
+  animation-delay: 2s;
   animation-fill-mode: forwards;
 }
 
@@ -211,11 +211,11 @@
   /* -webkit-animation: fadeOut 1 5s ease-in;
   -moz-animation: fadeOut 1 5s ease-in;
   -o-animation: fadeOut 1 5s ease-in; */
-  animation: finalFade 1 5s ease-in;
+  animation: fadeIn 1 3s ease-in;
   /* -webkit-animation-delay: 12s;
   -moz-animation-delay: 12s;
   -o-animation-delay: 12s; */
-  animation-delay: 6s;
+  animation-delay: 4s;
   animation-fill-mode: forwards;
 }
 
@@ -239,7 +239,7 @@
   to{opacity: 1;}
 }
 
-@-webkit-keyframes finalFade{
+/* @-webkit-keyframes finalFade{
   0%{opacity: 0;}
   30%{opacity: 1;}
   80%{opacity: .9;}
@@ -265,4 +265,4 @@
   30%{opacity: 1;}
   80%{opacity: .9;}
   100%{opacity: 1;}
-}
+} */
