--- a/src/components/Collapse/collapse.css
+++ b/src/components/Collapse/collapse.css
@@ -45,13 +45,13 @@
 
 .collapse-content{
   overflow: hidden;
-  display: none;
-  transition: display 0.5s ease;
+  opacity: 0;
+  transition: opacity 0.7s ease;
 }
 
 .collapse-content.open {
   max-width: 1015px;
-  display: flex;
+  opacity: 1;
   padding: 15px;
   background: rgba(246, 246, 246, 0.4509803922);
   border-radius: 10px;
