--- a/src/components/Project/ProjectPage/projectPage.css
+++ b/src/components/Project/ProjectPage/projectPage.css
@@ -81,10 +81,12 @@
 
 .github-logo{
     height: 30px;
+    width: 30px;
 }
 @media (min-width: 699px) {
     .github-logo{
         height: 40px;
+        width: 40px;
     }
 }
 
