--- a/src/components/Collapse/collapse.css
+++ b/src/components/Collapse/collapse.css
@@ -45,13 +45,13 @@
 
 .collapse-content{
   overflow: hidden;
-  opacity: 0;
-  transition: opacity 0.7s ease;
+  display: none;
+  /* transition: display 1s ease; */
 }
 
 .collapse-content.open {
   max-width: 1015px;
-  opacity: 1;
+  display: flex;
   padding: 15px;
   background: rgba(246, 246, 246, 0.4509803922);
   border-radius: 10px;
