--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Handlee&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Rubik+Lines&family=Shantell+Sans:ital,wght@0,300..800;1,300..800&family=Vujahday+Script&display=swap");
 * {
   margin: 0;
 }
